Added New Level

--- a/WolfieFPS/Config/DefaultEngine.ini
+++ b/WolfieFPS/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+GameDefaultMap=/Game/StarterContent/Maps/NewCS.NewCS
 
 
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/StarterContent/Maps/NewCS.NewCS
 GlobalDefaultGameMode=/Game/BluePrint/MyFPSModeBase.MyFPSModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
